--- a/scss/pages/_nosotros.scss
+++ b/scss/pages/_nosotros.scss
@@ -1,14 +1,10 @@
-main {
+.main-nosotros {
   .nosotros-container {
     @include flex(column, center, center);
-    // display: flex;
-    // flex-direction: column;
-    // justify-content: center;
-    // align-items: center;
     background-color: nth($list: $colores, $n: 3);
     width: 100%;
     gap: 1rem;
-    padding: 0 3rem;
+    padding: 0 2rem;
     box-sizing: border-box;
 
     .titulo-nosotros {
@@ -38,16 +34,12 @@ main {
         width: 60%;
         height: auto;
         object-fit: cover;
-        box-shadow: 0px 0px 30px 0px rgb(248, 103, 221);
+        box-shadow: 0px 0px 30px 0px nth($list: $colores, $n: 4);
       }
 
       .antes,
       .ahora {
         @include flex(column, center, center);
-        // display: flex;
-        // flex-direction: column;
-        // justify-content: center;
-        // align-items: center;
         font-size: 1rem;
         text-align: center;
         margin: 2rem;
@@ -56,7 +48,7 @@ main {
 
       .resaltado {
         font-weight: bold;
-        color: black;
+        color: nth($list: $colores, $n: 1);
       }
     }
   }
@@ -68,6 +60,6 @@ main {
 .pie-nosotros {
   text-align: center;
   padding-top: 1rem;
-  margin-bottom: 1rem;
-  color: #0e185f;
+  margin-bottom: 2rem;
+  color: nth($list: $colores, $n: 1);
 }
