--- a/scss/pages/_reservas.scss
+++ b/scss/pages/_reservas.scss
@@ -1,18 +1,18 @@
 .main-reservas {
+  margin: 3rem;
   .form-container {
     align-items: center;
-    padding: 0 3rem;
     width: 100%;
     margin: 0 auto;
     gap: 0.7rem;
 
     .titulo-reservas {
-      color: #0e185f;
-      padding-bottom: 0.5rem;
       text-align: center;
-      margin-bottom: 0.5rem;
-      border-bottom: 2px solid #0e185f;
+      color: nth($list: $colores, $n: 1);
+      padding-bottom: 0.5rem;
       margin-top: 1rem;
+      border-bottom: 2px solid nth($list: $colores, $n: 1);
+      margin-bottom: 0.5rem;
     }
 
     .form-datos {
@@ -20,12 +20,12 @@
       margin: 2rem 0;
 
       .formulario {
-        background-color: #0e185f;
-        box-shadow: 0px 0px 30px 0px rgb(248, 103, 221);
+        justify-items: center;
+        align-items: center;
+        background-color: nth($list: $colores, $n: 1);
+        box-shadow: 0px 0px 30px 0px nth($list: $colores, $n: 4);
         width: 70%;
         padding: 2rem;
-        align-items: center;
-        justify-items: center;
         gap: 0.7rem;
         border-radius: 20px;
         display: grid;
@@ -43,7 +43,7 @@
           font-size: 15px;
           text-align: center;
           font-weight: bold;
-          color: white;
+          color: nth($list: $colores, $n: 3);
           margin: 10px;
         }
 
@@ -60,7 +60,7 @@
         .hasta {
           input[type="date"] {
             &::-webkit-calendar-picker-indicator {
-              color: white;
+              color: nth($list: $colores, $n: 3);
             }
           }
         }
@@ -70,7 +70,7 @@
         .menores,
         .adultos {
           input {
-            border: 1px solid white;
+            border: 1px solid nth($list: $colores, $n: 3);
             border-radius: 5px;
             width: 9rem;
             height: 2rem;
@@ -78,12 +78,12 @@
             text-align: center;
             font-size: 13px;
             padding: 1rem;
-            color: white;
+            color: nth($list: $colores, $n: 3);
             background-color: transparent;
 
             &:hover {
-              color: #0e185f;
-              background-color: #00ffdd;
+              color: nth($list: $colores, $n: 1);
+              background-color: nth($list: $colores, $n: 2);
             }
           }
         }
@@ -103,7 +103,7 @@
         .email {
           input {
             border-style: none;
-            border-bottom: 1px solid white;
+            border-bottom: 1px solid nth($list: $colores, $n: 3);
             width: 13rem;
             height: 2rem;
             font-size: 13px;
@@ -112,16 +112,16 @@
             background-color: transparent;
 
             &:hover {
-              color: #0e185f;
-              background-color: #00ffdd;
+              color: nth($list: $colores, $n: 1);
+              background-color: nth($list: $colores, $n: 2);
             }
           }
         }
 
         .form-10 {
           grid-column: 1/3;
-          border-top: 1px solid white;
-          border-bottom: 1px solid white;
+          border-top: 1px solid nth($list: $colores, $n: 3);
+          border-bottom: 1px solid nth($list: $colores, $n: 3);
           width: 90%;
           padding: 1rem;
           margin-top: 0.7rem;
@@ -129,7 +129,7 @@
             width: 100%;
             border-style: none;
             background-color: transparent;
-            color: white;
+            color: nth($list: $colores, $n: 3);
           }
         }
 
@@ -139,20 +139,20 @@
           .submit {
             width: 100%;
             border-style: none;
-            background-color: #00ffdd;
-            color: #0e185f;
+            background-color: nth($list: $colores, $n: 2);
+            color: nth($list: $colores, $n: 1);
           }
         }
 
         .submit {
-          color: #0e185f;
+          color: nth($list: $colores, $n: 1);
           height: 2.5rem;
           font-size: 1.3rem;
           font-weight: bold;
 
           &:hover {
-            background-color: white;
-            color: #0e185f;
+            background-color: nth($list: $colores, $n: 3);
+            color: nth($list: $colores, $n: 1);
           }
         }
       }
@@ -160,8 +160,10 @@
 
     .informacion {
       display: flex;
-      flex-direction: column;
-      align-items: center;
+      @include flex(column, center, center);
+      // flex-direction: column;
+      // justify-content: center;
+      // align-items: center;
       text-align: center;
       margin: 5rem 1rem 0 5rem;
 
@@ -178,7 +180,7 @@
           iconify-icon {
             margin-right: 10px;
             font-size: 1.5rem;
-            color: #0e185f;
+            color: nth($list: $colores, $n: 1);
           }
         }
       }
@@ -190,225 +192,16 @@
         text-align: left;
         font-size: 1.5rem;
         font-weight: bold;
-        color: #0e185f;
+        color: nth($list: $colores, $n: 1);
       }
 
       .maps {
         width: 100%;
         height: auto;
-        box-shadow: 0px 0px 20px 0px rgb(175, 175, 180);
+        box-shadow: 0px 0px 30px 0px rgb(175, 175, 180);
         margin-bottom: 2rem;
         margin-top: 1rem;
       }
     }
   }
 }
-
-// .main-reservas {
-//   .form-container {
-//     align-items: center;
-//     padding: 0 3rem;
-//     width: 100%;
-//     margin-left: auto;
-//     margin-right: auto;
-//     gap: 0.7rem;
-
-//     .form-1 .titulo-reservas {
-//       color: #0e185f;
-//       padding-bottom: 0.5rem;
-//       text-align: center;
-//       margin-bottom: 0.5rem;
-//       border-bottom: 2px solid #0e185f;
-//       margin-top: 1rem;
-//     }
-
-//     .form-datos {
-//       display: flex;
-//       margin: 2rem 0;
-
-//       .formulario {
-//         background-color: #0e185f;
-//         box-shadow: 0px 0px 30px 0px rgb(248, 103, 221);
-//         width: 70%;
-//         padding: 2rem;
-//         align-items: center;
-//         justify-items: center;
-//         gap: 0.7rem;
-//         border-radius: 20px;
-//         display: grid;
-//         grid-template-columns: 1fr 1fr;
-//         grid-template-areas:
-//           "titulo titulo"
-//           "desde hasta"
-//           "menores adultos"
-//           "nombre apellido "
-//           "tel email"
-//           "textarea textarea"
-//           "submit submit";
-
-//         .form-2 .desde {
-//           grid-column: 1/2;
-
-//           p {
-//             font-size: 15px;
-//             text-align: center;
-//             font-weight: bold;
-//             color: white;
-//             margin: 10px;
-//           }
-//         }
-
-//         .form-3 .hasta {
-//           grid-column: 2/3;
-//         }
-//         .form-4 .menores {
-//           grid-column: 1/2;
-//         }
-//         .form-5 .adultos {
-//           grid-column: 2/3;
-//         }
-//         .form-6 .nombre {
-//           grid-column: 1/2;
-//         }
-//         .form-7 .apellido {
-//           grid-column: 2/3;
-//         }
-//         .form-8 .tel {
-//           grid-column: 1/2;
-//         }
-//         .form-9 .email {
-//           grid-column: 2/3;
-//         }
-//         .form-10 .comentarios {
-//           grid-column: 1/3;
-//           border-top: 1px solid white;
-//           border-bottom: 1px solid white;
-//           width: 90%;
-//           padding: 1rem;
-//           margin-top: 0.7rem;
-//         }
-//         .form-11 .enviar {
-//           grid-column: 1/3;
-//           width: 90%;
-//           .submit {
-//             background-color: white;
-//             color: #0e185f;
-//             height: 2.5rem;
-//             font-size: 1.3rem;
-//             font-weight: bold;
-//           }
-
-//           &:hover {
-//             background-color: #00ffdd;
-//             color: black;
-//           }
-//         }
-
-//         .nombre p,
-//         .apellido p,
-//         .tel p,
-//         .email p {
-//           text-align: left;
-//         }
-
-//         .desde input,
-//         .hasta input,
-//         .menores input,
-//         .adultos input {
-//           border: 1px solid white;
-//           border-radius: 5px;
-//           width: 9rem;
-//           height: 2rem;
-//           text-transform: uppercase;
-//           text-align: center;
-//           font-size: 13px;
-//           padding: 1rem;
-//           color: white;
-//           background-color: transparent;
-//         }
-//         &:hover {
-//           .desde input,
-//           .hasta input,
-//           .menores input,
-//           .adultos input {
-//             color: #0e185f;
-//             background-color: #00ffdd;
-//           }
-//         }
-
-//         .menores input,
-//         .adultos input {
-//           padding-left: 5px;
-//           width: 6rem;
-//           height: 2rem;
-//         }
-
-//         .nombre input,
-//         .apellido input,
-//         .tel input,
-//         .email input {
-//           border-style: none;
-//           border-bottom: 1px solid white;
-//           width: 13rem;
-//           font-size: 13px;
-//           text-align: left;
-//           padding-left: 0.7rem;
-//           background-color: transparent;
-//         }
-//         &:hover {
-//           color: #0e185f;
-//           background-color: #00ffdd;
-//         }
-
-//         .form-10 textarea,
-//         .submit {
-//           width: 100%;
-//           border-style: none;
-//           background-color: transparent;
-//           color: white;
-//         }
-//       }
-//       .informacion {
-//         display: flex;
-//         flex-direction: column;
-//         align-items: center;
-//         text-align: center;
-//         margin: 3rem 1rem 0 2rem;
-
-//         ul {
-//           list-style: none;
-//           padding: 1rem 0 0.5rem 0;
-
-//           li {
-//             display: flex;
-//             align-items: center;
-//             font-size: 1rem;
-//             margin-bottom: 10px;
-
-//             iconify-icon {
-//               margin-right: 10px;
-//               font-size: 1.5rem;
-//               color: #0e185f;
-//             }
-//           }
-//         }
-//       }
-//     }
-//     .ubicacion {
-//       h3 {
-//         margin-left: 1rem;
-//         text-align: left;
-//         font-size: 1.5rem;
-//         font-weight: bold;
-//         color: #0e185f;
-//       }
-//       .maps {
-//         width: 100%;
-//         height: auto;
-//         box-shadow: 0px 0px 20px 0px rgb(175, 175, 180);
-//         margin-bottom: 2rem;
-//         margin-top: 1rem;
-//       }
-//     }
-//   }
-// }
