--- a/scss/pages/_servicios.scss
+++ b/scss/pages/_servicios.scss
@@ -1,6 +1,6 @@
 /* SERVICIOS*/
 
-main {
+.main-servicios {
   position: relative;
   width: 100%;
 
@@ -27,21 +27,24 @@ main {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     justify-content: center;
+    align-items: center;
     gap: 0.5rem;
     padding: 2rem;
 
     .servicios-1,
     .servicios-2,
     .servicios-3 {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      flex-direction: column;
+      @include flex(column, center, center);
+      // display: flex;
+      // flex-direction: column;
+      // justify-content: center;
+      // align-items: center;
       height: auto;
       padding: 1rem;
       max-width: 20rem;
       border-radius: 15px;
-      box-shadow: 0px 0px 20px 0px rgb(248, 103, 221);
+      box-shadow: 0px 0px 20px 0px nth($list: $colores, $n: 4);
+      width: 100%;
 
       ul {
         list-style: none;
@@ -56,14 +59,14 @@ main {
           .icon {
             margin-right: 10px;
             font-size: 1.5rem;
-            color: #0e185f;
+            color: nth($list: $colores, $n: 1);
           }
         }
       }
 
       .button-servicios {
-        background-color: #0e185f;
-        color: #afd3e2;
+        background-color: nth($list: $colores, $n: 1);
+        color: nth($list: $colores, $n: 3);
         width: 6rem;
         height: 2rem;
         border-radius: 8px;
@@ -71,8 +74,8 @@ main {
         text-decoration: none;
 
         &:hover {
-          background-color: #00ffdd;
-          color: #0e185f;
+          background-color: nth($list: $colores, $n: 2);
+          color: nth($list: $colores, $n: 1);
           transition: 0.7s;
         }
       }
