--- a/scss/pages/_servicios.scss
+++ b/scss/pages/_servicios.scss
@@ -13,7 +13,7 @@
     border-bottom: 2px solid #0e185f;
   }
 
-  img {
+  .main-servicios img {
     width: 100%;
     max-height: 40vh;
     margin: 0 auto;
