--- a/scss/pages/_servicios.scss
+++ b/scss/pages/_servicios.scss
@@ -15,7 +15,7 @@
 
   .servicios-img {
     width: 100%;
-    max-height: 50vh;
+    max-height: 40vh;
     margin: 0 auto;
     padding-bottom: 0.5rem;
     object-fit: cover;
@@ -28,20 +28,19 @@
     grid-template-columns: repeat(3, 1fr);
     justify-content: center;
     align-items: center;
-
     gap: 0.5rem;
     padding: 1rem;
+    margin-bottom: 2rem 0;
 
     .servicios-1,
     .servicios-2,
     .servicios-3 {
       @include flex(column, center, center);
       height: auto;
-      padding: 1rem;
       max-width: 20rem;
-      border: 1px solid nth($list: $colores, $n: 1);
+      border: 1px solid nth($list: $colores, $n: 2);
       border-radius: 15px;
-      // box-shadow: 0px 0px 20px 0px nth($list: $colores, $n: 4);
+      box-shadow: 0px 10px 10px 0px nth($list: $colores, $n: 2);
 
       width: 100%;
 
@@ -68,6 +67,7 @@
         color: nth($list: $colores, $n: 3);
         width: 6rem;
         height: 2rem;
+        margin-bottom: 1rem;
         border-radius: 8px;
         text-align: center;
         text-decoration: none;
